--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1>Formation Video</h1>
   
-  <buton onclick="alert('Hi !')">CLIQUEZ ICI !</button>
+  <buton>CLIQUEZ ICI !</button>
+  
+  
 </body>
 </html>
