--- a/index.html
+++ b/index.html
@@ -1,17 +1,101 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ma page web</title>
+<meta charset="UTF-8">
+<!-- Titre -->
+<title>Pears streaming : films et series gratuit en streaming et en vf</title>
+<!-- rel feuille css -->
+<link rel="stylesheet" type="text/css" href="style.css">
+<!-- Image onglets -->
+<link rel="icon" type="image/png" sizes="16x16" href="https://i.ibb.co/XCCLsd0/pears-streaming-logo.png">
+<!-- Menu -->
+<link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet"
+href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+<script
+src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script
+src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<div class="menu">
+    <nav role="navigation" class="navbar navbar-default">
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+            <a href="" class="navbar-brand" style="color:#000000;"><strong>Pears Streaming</strong></a>
+        </div>
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="">Accueil</a></li>
+                <li><a href="film.html">Liste des films</a></li>
+                <li><a href="series.html">Séries</a></li>
+            
+        </div>
+    </nav>
+</div>
+<!-- loupe -->
+<main>
+    <a href="search.html">
+      <img src="https://i.ibb.co/ZYkJZXW/loupe-1.png"alt="Image" class="loupe">
+    </a>
+</main>
+<br>
 </head>
 <body>
-  <h1>Formation Video</h1>
-  
-  
-  <script src="script.js"></script>
-  
-  
+<style type="text/css">
+      body {
+      background-color: #2c2c2c;
+      }
+</style>
+<h2 class="titre">Nouvelles sorties</h2>
+<hr>
+<section class="main-container">
+<div class="pre">
+<a href="https://pears-streaming.github.io/film/blackadam"><img src="https://fr.web.img6.acsta.net/pictures/22/10/04/14/00/5857542.jpg"><br>Black Adam</a>
+<a href="https://pears-streaming.github.io/film/thor"><img src="https://fr.web.img6.acsta.net/pictures/22/05/24/11/16/2411535.jpg"><br>Thor: Love and Thunder</a>
+<a href="https://pears-streaming.github.io/film/uncharted"><img src="https://media.senscritique.com/media/000020410343/300/uncharted.jpg"><br>Uncharted</a>
+<a href="https://pears-streaming.github.io/film/minions2"><img src="https://fr.web.img3.acsta.net/pictures/22/04/29/12/09/2431585.jpg"><br>Les Minions 2 : Il était une fois Gru</a>
+<a href="https://pears-streaming.github.io/film/bullettrain"><img src="https://fr.web.img6.acsta.net/c_310_420/pictures/22/07/13/11/36/3514892.jpg"><br>Bullet Train</a>
+<a href="https://pears-streaming.github.io/film/segpa"><img src="https://fr.web.img5.acsta.net/pictures/22/02/04/17/58/3314454.jpg"><br>Les SEGPA</a>
+</section class="main-container">
+
+       </div>
+<h2 class="titre">Films à la une</h2>
+<hr>
+<section class="main-container">
+<div class="pre">
+<a href="https://pears-streaming.github.io/film/ambulance"><img src="https://fr.web.img2.acsta.net/pictures/22/02/21/18/59/0222383.jpg"><br>Ambulance</a>
+<a href="https://pears-streaming.github.io/film/nightteeth"><img src="https://voir.dustreaming.site/images/posters/4niEFGAUEz3GUqwk9Y2y4aAERhE.jpg"><br>Night Teeth</a>
+<a href="https://pears-streaming.github.io/film/charmck"><img src="https://fr.web.img2.acsta.net/pictures/20/09/10/09/48/2079319.jpg"><br>Charm City Kings</a>
+<a href="https://pears-streaming.github.io/film/"><img src="https://m.media-amazon.com/images/M/MV5BOGUyZDUxZjEtMmIzMC00MzlmLTg4MGItZWJmMzBhZjE0Mjc1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_FMjpg_UX1000_.jpg"><br>The Social Network</a>
+<a href="https://pears-streaming.github.io/film/fonda"><img src="https://fr.web.img3.acsta.net/pictures/16/11/18/17/49/128537.jpg"><br>Le Fondateur</a>
+<a href="https://pears-streaming.github.io/film/sausagepart"><img src="https://fr.web.img2.acsta.net/pictures/16/11/03/16/08/259315.jpg"><br>Sausage Party : La Vie privée des aliments</a>
+</section class="main-container">
+
+       </div>
+<h2 class="titre">Séries à la une</h2>
+<hr>
+<section class="main-container">
+<div class="pre">
+<a href="https://pears-streaming.github.io/series/gotham"><img src="https://m.media-amazon.com/images/I/81yQcA5Xv+L._AC_SL1500_.jpg"><br>Gotham</a>
+<a href="https://pears-streaming.github.io/series/lucifer"><img src="https://fr.web.img4.acsta.net/pictures/21/08/05/10/07/5681271.jpg"><br>Lucifer</a>
+<a href="https://pears-streaming.github.io/series/ltm"><img src="https://www.ecranlarge.com/uploads/image/001/149/bhquhngefwnljmulalde327bb4s-976.jpg"><br>Lie to Me</a>
+<a href="https://pears-streaming.github.io/series/sexe"><img src="https://fr.web.img6.acsta.net/pictures/19/01/03/10/55/2296345.jpg"><br>Sex Education</a>
+<a href="https://pears-streaming.github.io/series/fambusi"><img src="https://fr.web.img5.acsta.net/pictures/19/05/28/11/56/3077075.jpg"><br>Family Business</a>
+<a href="https://pears-streaming.github.io/series/see"><img src="https://image.tmdb.org/t/p/w185/g3JsScc7mQCfc3e5e5rXwu7xVVP.jpg"><br>See</a>
+</section class="main-container">
+
+       </div>
+    <!-- FOOTER -->
+    <footer>
+      <p>&copy 2022 Pears Streaming</p>
+      <p> Pears Streaming n'héberge en aucun cas les films et séries proposé<br> et se délaisse de toute responsabilité par rapport a ces programmes.</p>
+      <p>Dernière mise à jour de Pears Streaming en septembre 2022</p>
+    </footer>
+  </div>
 </body>
 </html>
