--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></scri
 </section class="main-container">
 
        </div>
+    </div>
+    </div>
 
 <?php require "footer.php";
 ?>
 </body>
 </html>
-?>
