--- a/index.html
+++ b/index.html
@@ -95,5 +95,5 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></scri
 
 </body>
 </html>
-<?php require "footer.php";
+<?php require "footer.php"; ?>
 ?>
