--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></scri
        </div>
     </div>
     </div>
-
+<?php 
+          include("footer.php"); 
+        ?>
 </body>
 </html>
-<?php require "footer.php"; ?>
-?>
+
