--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></scri
     </div>
     </div>
 <?php 
-          include("footer.php"); 
+          include("footer.html"); 
         ?>
 </body>
 </html>
